--- a/RecycleProject/Storyboards/Newsfeed.storyboard
+++ b/RecycleProject/Storyboards/Newsfeed.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="insetGrouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="xJn-5Q-Cym">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
                                 <color key="backgroundColor" name="CustomDarkBackgroundColor"/>
                                 <color key="separatorColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -128,10 +128,10 @@
                         </subviews>
                         <color key="backgroundColor" name="CustomDarkBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="xJn-5Q-Cym" firstAttribute="bottom" secondItem="Wf5-bJ-q1v" secondAttribute="bottom" id="PVc-QK-yy4"/>
+                            <constraint firstItem="xJn-5Q-Cym" firstAttribute="bottom" secondItem="jEt-Ce-onL" secondAttribute="bottom" id="PVc-QK-yy4"/>
                             <constraint firstItem="xJn-5Q-Cym" firstAttribute="leading" secondItem="Wf5-bJ-q1v" secondAttribute="leading" id="PbW-9I-rBi"/>
                             <constraint firstItem="xJn-5Q-Cym" firstAttribute="trailing" secondItem="Wf5-bJ-q1v" secondAttribute="trailing" id="Thc-ca-KF3"/>
-                            <constraint firstItem="xJn-5Q-Cym" firstAttribute="top" secondItem="Wf5-bJ-q1v" secondAttribute="top" id="Zd1-q1-bgh"/>
+                            <constraint firstItem="xJn-5Q-Cym" firstAttribute="top" secondItem="jEt-Ce-onL" secondAttribute="top" id="Zd1-q1-bgh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Wf5-bJ-q1v"/>
                     </view>
