Get number of recycle stations with chosen recycle code from server

--- a/RecycleProject/Storyboards/Handbook.storyboard
+++ b/RecycleProject/Storyboards/Handbook.storyboard
@@ -283,7 +283,7 @@
                                                     <constraint firstItem="zyf-MT-pKI" firstAttribute="leading" secondItem="cnx-ZT-Oa4" secondAttribute="leading" id="aol-cy-pQ5"/>
                                                 </constraints>
                                             </stackView>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Придётся поискать, куда это можно сдать в твоём регионе" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D6d-aB-E1f">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D6d-aB-E1f">
                                                 <rect key="frame" x="163" y="129.33333333333334" width="197" height="61"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="61" id="S9V-Nc-RbP"/>
