--- a/RecycleProject/Storyboards/Map.storyboard
+++ b/RecycleProject/Storyboards/Map.storyboard
@@ -131,20 +131,23 @@
                                     <constraint firstAttribute="width" secondItem="baI-v9-ar5" secondAttribute="height" multiplier="16:6" id="PLD-Bi-qp2"/>
                                 </constraints>
                             </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="T8r-fp-YkT">
-                                <rect key="frame" x="15" y="160.66666666666666" width="345" height="52"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="T8r-fp-YkT">
+                                <rect key="frame" x="15" y="160.66666666666666" width="345" height="70"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="0Bw-Na-uJb">
-                                        <rect key="frame" x="0.0" y="0.0" width="210.33333333333334" height="52"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="0Bw-Na-uJb">
+                                        <rect key="frame" x="0.0" y="0.0" width="280" height="70"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название пункта приёма" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="M29-1Y-7Rz">
-                                                <rect key="frame" x="0.0" y="0.0" width="210.33333333333334" height="21"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Название пункта приёма" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="M29-1Y-7Rz">
+                                                <rect key="frame" x="0.0" y="0.0" width="280" height="44"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Адрес пункта приема" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="2IN-Q0-Tzm">
-                                                <rect key="frame" x="0.0" y="31" width="210.33333333333334" height="21"/>
+                                                <rect key="frame" x="0.0" y="49" width="280" height="21"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="21" id="CgA-PY-vAV"/>
+                                                </constraints>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="18"/>
                                                 <color key="textColor" systemColor="placeholderTextColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -152,9 +155,10 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vdh-tE-72b">
-                                        <rect key="frame" x="245.33333333333329" y="0.0" width="99.666666666666657" height="52"/>
+                                        <rect key="frame" x="285" y="0.0" width="60" height="70"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="52" id="aTP-MD-XyO"/>
+                                            <constraint firstAttribute="width" constant="60" id="1Eq-OI-nwS"/>
+                                            <constraint firstAttribute="height" constant="70" id="aTP-MD-XyO"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                                         <color key="tintColor" name="GoodRecycleStatusColor"/>
@@ -173,7 +177,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="9oA-Qm-dh4">
-                                <rect key="frame" x="15" y="237.66666666666666" width="345" height="91.333333333333343"/>
+                                <rect key="frame" x="15" y="250.66666666666666" width="345" height="91.333333333333343"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Всё, что здесь принимают" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ztK-wN-l7R">
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="17.333333333333332"/>
@@ -261,7 +265,7 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8FU-1q-BHQ">
-                                <rect key="frame" x="15" y="349" width="345" height="211.66666666666663"/>
+                                <rect key="frame" x="15" y="362" width="345" height="211.66666666666663"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="7B8-uJ-Q59">
                                         <rect key="frame" x="0.0" y="0.0" width="345" height="42"/>
@@ -391,7 +395,7 @@
                             <constraint firstItem="9eo-Rv-bNn" firstAttribute="trailing" secondItem="8FU-1q-BHQ" secondAttribute="trailing" constant="15" id="Qpw-Co-1Lo"/>
                             <constraint firstAttribute="trailing" secondItem="T8r-fp-YkT" secondAttribute="trailing" constant="15" id="VhE-3G-2U8"/>
                             <constraint firstItem="9oA-Qm-dh4" firstAttribute="leading" secondItem="9eo-Rv-bNn" secondAttribute="leading" constant="15" id="cEu-ci-5x0"/>
-                            <constraint firstItem="9oA-Qm-dh4" firstAttribute="top" secondItem="T8r-fp-YkT" secondAttribute="bottom" constant="25" id="duw-cy-NVk"/>
+                            <constraint firstItem="9oA-Qm-dh4" firstAttribute="top" secondItem="T8r-fp-YkT" secondAttribute="bottom" constant="20" id="duw-cy-NVk"/>
                             <constraint firstItem="8FU-1q-BHQ" firstAttribute="leading" secondItem="9eo-Rv-bNn" secondAttribute="leading" constant="15" id="fqO-wk-T6s"/>
                             <constraint firstItem="T8r-fp-YkT" firstAttribute="leading" secondItem="9eo-Rv-bNn" secondAttribute="leading" constant="15" id="pm2-zF-sFo"/>
                             <constraint firstItem="9eo-Rv-bNn" firstAttribute="trailing" secondItem="9oA-Qm-dh4" secondAttribute="trailing" constant="15" id="vLK-fh-aF6"/>
@@ -431,7 +435,7 @@
             <color red="0.94700002670288086" green="0.94300001859664917" blue="0.95200002193450928" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
         <namedColor name="CustomInversedBackgroundColor">
-            <color red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="GoodRecycleStatusColor">
             <color red="0.36500000953674316" green="0.57599997520446777" blue="0.31000000238418579" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
